fix(css): better spacing on tag buttons

--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -7,7 +7,7 @@
   &__list {
     display: flex;
     flex-wrap: wrap;
-    gap: 0 0.8rem;
+    gap: 0.8rem;
     overflow-x: auto;
 
     // Add padding and neg margin to allow focus style visibility
